# DiskForge

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: limitations.md
scripts/: verify_structure.py
src/diskforge/: __init__.py
src/diskforge/cli/: __init__.py  main.py
src/diskforge/core/: __init__.py  config.py  job.py  logging.py  models.py  safety.py  session.py
src/diskforge/platform/: __init__.py  base.py  file_ops.py
src/diskforge/platform/linux/: __init__.py  backend.py  parsers.py
src/diskforge/platform/windows/: __init__.py  backend.py  parsers.py
src/diskforge/plugins/: __init__.py  base.py  inventory.py  operations.py
src/diskforge/resources/: diskforge.desktop
src/diskforge/sync/: __init__.py  manager.py
src/diskforge/ui/: __init__.py  main.py  theme.py
src/diskforge/ui/assets/: __init__.py  icons.py
src/diskforge/ui/models/: __init__.py  disk_model.py  job_model.py
src/diskforge/ui/styles/: diskforge.qss
src/diskforge/ui/views/: __init__.py  main_window.py
src/diskforge/ui/views/wizards/: __init__.py  operations.py
src/diskforge/ui/widgets/: __init__.py  confirmation_dialog.py  disk_view.py  operations_tree.py  progress_widget.py  ribbon.py  selection_actions_panel.py  usage_chart.py
tests/: __init__.py  conftest.py
tests/gui/: __init__.py  test_gui_basic.py  test_main_window_ui.py
tests/integration/: __init__.py  test_platform_linux.py
tests/unit/: __init__.py  test_config.py  test_job.py  test_models.py  test_safety.py
