[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diskforge"
version = "1.0.0"
description = "Production-grade cross-platform disk management application"
authors = ["DiskForge Team <team@diskforge.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "diskforge", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Filesystems",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "^6.6.0"
pydantic = "^2.5.0"
structlog = "^24.1.0"
click = "^8.1.0"
rich = "^13.7.0"
psutil = "^5.9.0"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
pytest-qt = "^4.3.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
diskforge = "diskforge.cli.main:main"
diskforge-gui = "diskforge.ui.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line too long, handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["diskforge"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests that don't require external resources",
    "integration: Integration tests that may require mocked system access",
    "gui: GUI tests requiring Qt",
    "slow: Slow running tests",
]
qt_api = "pyside6"

[tool.coverage.run]
source = ["src/diskforge"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
